# FuzzerMM

./: .gitignore  README.md
baby_fuzzer/: Cargo.toml
baby_fuzzer/solutions/: .49ce03b82cd51216_1.metadata  .a8cd5bf6a1a3a0ad_1.metadata  49ce03b82cd51216  a8cd5bf6a1a3a0ad
baby_fuzzer/src/: main.rs
mm_fuzzer/: .cur_input_48336_0  .cur_input_49997_0  .cur_input_55618_0  .cur_input_62821_0  .cur_input_76798_0  .gitignore  Cargo.toml  pua_wrapper.sh
mm_fuzzer/iv_inputs/: 00008a9734bed302  000df58102ae7237  003c96f73ea0f4e5  004e6710c7795d8e  005605f30cdef131  006f23d249eaa6b9  007945780e18bf22  0083aa009dc005b0  00f9638e9ac69b7e  0113162b500732d2  0117fbb6a00680ea  0137e934aa4202ef  016e0b7f8d8e0a29  018729542868c473  01e4427cb4481ca3  0204ec5eed1ec265  02225e4a66994fb8  027abb4f8d2470c1  02853bf6349aa149  02d01f6c9dc84c90  02d22dc1ad18c860  02da21d9f01b01ad  0338827c4a2ad62a  034d6355d1519f42  036a49278f311dc6  03dc9cfeb093f006  03f02214e776fa79  03f06160ea673099  044b94dbc0cd5f7d  045372a8b768af3e  0480e1fbfeee4bec  049cc4ffebdb0d98  04fad8636af19d3a  0553655a16a86652  05c04ef9f15d42c6  05cb7c14fa8ec597  05dc0058bb1a47d6  060e1e8972625fa1  060f7d4150384817  06353c33516d52eb  (+1868 more)
mm_fuzzer/src/: main.rs
toy_pua/: op  op.c  programOP.c  programPUA.c  pua  pua.c  sigma.txt
