[package]
name = "baby_fuzzer"
edition = "2024"
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]

libafl = { path = "../crates/libafl/" }
libafl_bolts = { path = "../crates/libafl_bolts/" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true

[lints]
workspace = true
