[package]
name = "mm_fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
libafl = { path = "../LibAFL/crates/libafl" }
libafl_bolts = { path = "../LibAFL/crates/libafl_bolts" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true
